--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="kr.anima.xd.s.a170802_balancewheel.MainActivity"
-    >
+    android:orientation="vertical"
+    android:weightSum="10">
 
     <FrameLayout
+        android:id="@+id/view_main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="0dp"
+        android:layout_weight="9">
     </FrameLayout>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/layout_tab"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_gravity="bottom"
         app:tabGravity="fill"
-        android:layout_alignParentBottom="true"
         >
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
@@ -52,4 +55,4 @@
             />
     </android.support.design.widget.TabLayout>
 
-</RelativeLayout>
+</LinearLayout>
