--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,7 +10,12 @@
     <!--Icon Size-->
     <dimen name="ic_24dp">24dp</dimen>
     <dimen name="ic_48dp">48dp</dimen>
+    <dimen name="ic_72dp">72dp</dimen>
     <dimen name="ic_96dp">96dp</dimen>
+    <dimen name="ic_128dp">128dp</dimen>
+    <dimen name="ic_176dp">176dp</dimen>
+    <dimen name="ic_224dp">224dp</dimen>
+    <dimen name="ic_256dp">256dp</dimen>
 
 
     <!--Typographic-->
