--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,13 @@
     android:orientation="vertical"
     android:weightSum="10">
 
-    <FrameLayout
+    <RelativeLayout
         android:id="@+id/view_main"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="9">
-    </FrameLayout>
+
+    </RelativeLayout>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/layout_tab"
