--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -41,7 +41,7 @@
     </android.support.v7.widget.CardView>
 
     <LinearLayout
-        android:id="@+id/layout_event"
+        android:id="@+id/layout_btn"
         android:layout_width="match_parent"
         android:layout_height="@dimen/ic_72dp"
         android:orientation="horizontal"
@@ -50,6 +50,7 @@
         android:weightSum="3">
 
         <LinearLayout
+            android:id="@+id/btn_level"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
@@ -72,6 +73,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/btn_storage"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
@@ -94,6 +96,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/btn_event"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
@@ -121,7 +124,7 @@
         android:id="@+id/list_mission"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/layout_event">
+        android:layout_below="@id/layout_btn">
 
     </ListView>
 
