--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,7 +40,7 @@
             android:id="@+id/img_facebook"
             android:layout_width="@dimen/ic_24dp"
             android:layout_height="@dimen/ic_24dp"
-            android:src="@drawable/ic_google_plus_r"
+            android:src="@drawable/ic_facebook_r"
             android:clickable="true"
             android:onClick="clickAccount"
             android:layout_margin="@dimen/_8dp"/>
@@ -73,6 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_maker"
+
         />
 
 </LinearLayout>
