--- a/app/src/main/res/layout/dashboard_tracker_open.xml
+++ b/app/src/main/res/layout/dashboard_tracker_open.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:theme="@style/MyAppTheme.NoActionBar">
+    android:layout_height="match_parent">
 
         <android.support.design.widget.TabLayout
             android:id="@+id/layout_tab"
