--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
 
 
     <!--Icon Size-->
+    <dimen name="ic_20dp">20dp</dimen>
     <dimen name="ic_24dp">24dp</dimen>
     <dimen name="ic_48dp">48dp</dimen>
     <dimen name="ic_72dp">72dp</dimen>
