--- a/app/src/main/res/layout/fragment_share_list.xml
+++ b/app/src/main/res/layout/fragment_share_list.xml
@@ -12,13 +12,11 @@
         android:layout_height="match_parent">
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
+            android:layout_height="@dimen/ic_48dp">
             <android.support.v7.widget.Toolbar
                 android:id="@+id/layout_share_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
+                android:layout_height="match_parent">
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
 
