--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,5 +28,22 @@
         <item name="android:clickable">true</item>
         <item name="android:onClick">clickBtn</item>
     </style>
+    
+    <style name="MyAppTheme.GridText">
+        <item name="android:layout_column">0</item>
+        <item name="android:layout_margin">@dimen/_8dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/typo_headline_sub</item>
+        <item name="android:layout_gravity">right</item>
+    </style>
 
+    <style name="MyAppTheme.Toggle">
+        <item name="android:layout_width">@dimen/ic_24dp</item>
+        <item name="android:layout_height">@dimen/ic_24dp</item>
+        <item name="android:textColor">@android:color/transparent</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:clickable">true</item>
+        <item name="android:checked">false</item>
+    </style>
+    
 </resources>
