--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,13 +29,12 @@
         <item name="android:onClick">clickBtn</item>
     </style>
     
-    <style name="MyAppTheme.GridText">
-        <item name="android:layout_column">0</item>
-        <item name="android:layout_margin">@dimen/_8dp</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">@dimen/typo_headline_sub</item>
-        <item name="android:layout_gravity">right</item>
-    </style>
+    <!--<style name="MyAppTheme.GridText">-->
+        <!--<item name="app:layout_column">0</item>-->
+        <!--<item name="android:textStyle">bold</item>-->
+        <!--<item name="android:textSize">@dimen/typo_headline_sub</item>-->
+        <!--<item name="app:layout_columnSpan">1</item>-->
+    <!--</style>-->
 
     <style name="MyAppTheme.Toggle">
         <item name="android:layout_width">@dimen/ic_24dp</item>
@@ -44,6 +43,11 @@
         <item name="android:background">@android:color/transparent</item>
         <item name="android:clickable">true</item>
         <item name="android:checked">false</item>
+    </style>
+
+    <style name="MyAppTheme.TableRow">
+        <item name="android:gravity">center</item>
+        <item name="android:padding">@dimen/_4dp</item>
     </style>
     
 </resources>
