--- a/app/src/main/res/layout/activity_add_content_1.xml
+++ b/app/src/main/res/layout/activity_add_content_1.xml
@@ -4,17 +4,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context="kr.anima.xd.s.a170802_balancewheel.AddContentActivity"
     android:padding="@dimen/_4dp"
-    app:columnCount="3"
+    app:columnCount="5"
     app:rowCount="11"
-    app:useDefaultMargins="true">
+    app:useDefaultMargins="true"
+    app:alignmentMode="alignBounds"
+    app:columnOrderPreserved="false"
+    app:orientation="horizontal">
 
     <EditText
         android:id="@+id/ed_task_name"
-        app:layout_column="0"
-        app:layout_columnSpan="3"
+        app:layout_columnSpan="5"
+        app:layout_row="0"
         android:inputType="text"
         android:ems="20"
         android:hint="@string/content_task_title"/>
@@ -22,42 +25,39 @@
         <!--<TextView-->
             <!--android:text="@string/content_mission"-->
             <!--style="@style/MyAppTheme.GridText"-->
-            <!--app:layout_row="1"-->
-            <!--app:layout_rowSpan="2"/>-->
+            <!--app:layout_row="1"/>-->
 
         <!--<Spinner-->
             <!--android:id="@+id/spi_mission"-->
-            <!--app:layout_column="1"-->
-            <!--app:layout_columnSpan="1"-->
             <!--app:layout_row="1"-->
+            <!--app:layout_columnSpan="4"-->
             <!--android:spinnerMode="dialog"-->
-            <!--app:layout_gravity="fill"-->
             <!--/>-->
 
         <!--<CheckBox-->
             <!--android:id="@+id/check_allday"-->
-            <!--app:layout_column="1"-->
             <!--app:layout_row="2"-->
-            <!--app:layout_gravity="right"-->
+            <!--app:layout_column="1"-->
+            <!--app:layout_columnSpan="2"-->
             <!--android:lines="1"-->
             <!--android:text="@string/content_date_all_day"/>-->
 
         <!--<CheckBox-->
             <!--android:id="@+id/check_lunar"-->
-            <!--app:layout_column="2"-->
+            <!--app:layout_columnSpan="2"-->
             <!--app:layout_row="2"-->
-            <!--app:layout_gravity="center_horizontal"-->
             <!--android:text="@string/content_date_lunar_calendar"/>-->
 
         <!--<TextView-->
             <!--android:text="@string/content_date_start"-->
             <!--style="@style/MyAppTheme.GridText"-->
-            <!--app:layout_row="3"/>-->
+            <!--app:layout_row="3"-->
+            <!--/>-->
 
         <!--<TextView-->
             <!--android:id="@+id/txt_date_start"-->
             <!--android:text="@string/content_date_start"-->
-            <!--app:layout_column="1"-->
+            <!--app:layout_columnSpan="2"-->
             <!--app:layout_row="3"-->
             <!--android:clickable="true"-->
             <!--android:onClick="clickBtn"/>-->
@@ -65,7 +65,7 @@
         <!--<TextView-->
             <!--android:id="@+id/txt_time_start"-->
             <!--android:text="@string/content_date_start"-->
-            <!--app:layout_column="2"-->
+            <!--app:layout_columnSpan="2"-->
             <!--app:layout_row="3"-->
             <!--android:clickable="true"-->
             <!--android:onClick="clickBtn"/>-->
@@ -78,7 +78,7 @@
         <!--<TextView-->
             <!--android:id="@+id/txt_date_end"-->
             <!--android:text="@string/content_date_end"-->
-            <!--app:layout_column="1"-->
+            <!--app:layout_columnSpan="2"-->
             <!--app:layout_row="4"-->
             <!--android:clickable="true"-->
             <!--android:onClick="clickBtn"/>-->
@@ -86,7 +86,7 @@
         <!--<TextView-->
             <!--android:id="@+id/txt_time_end"-->
             <!--android:text="@string/content_date_end"-->
-            <!--app:layout_column="2"-->
+            <!--app:layout_columnSpan="2"-->
             <!--app:layout_row="4"-->
             <!--android:clickable="true"-->
             <!--android:onClick="clickBtn"/>-->
@@ -100,46 +100,60 @@
 
         <!--<CheckBox-->
             <!--android:id="@+id/check_cycle"-->
-            <!--app:layout_column="2"-->
+            <!--app:layout_column="1"-->
+            <!--app:layout_columnSpan="4"-->
             <!--app:layout_row="5"-->
             <!--android:text="@string/content_no_cycle"/>-->
 
         <!--<Spinner-->
             <!--android:id="@+id/spi_cycle"-->
             <!--app:layout_column="1"-->
+            <!--app:layout_columnSpan="2"-->
             <!--app:layout_row="6"/>-->
 
         <!--<TextView-->
             <!--android:text="@string/content_cycle_date"-->
-            <!--app:layout_column="2"-->
+            <!--app:layout_column="3"-->
+            <!--app:layout_columnSpan="2"-->
             <!--app:layout_row="6"-->
             <!--/>-->
 
         <!--<TextView-->
             <!--android:text="@string/content_element"-->
             <!--style="@style/MyAppTheme.GridText"-->
-            <!--app:layout_row="7"/>-->
+            <!--app:layout_row="7"-->
+            <!--app:layout_rowSpan="2"/>-->
 
         <!--<android.support.v7.widget.RecyclerView-->
             <!--android:id="@+id/view_add_recycler"-->
             <!--app:layout_column="1"-->
-            <!--app:layout_columnSpan="2"-->
+            <!--app:layout_columnSpan="4"-->
             <!--app:layout_row="7"-->
+            <!--app:layout_rowSpan="2"-->
             <!--app:layoutManager="android.support.v7.widget.LinearLayoutManager"-->
             <!--android:orientation="horizontal"/>-->
 
         <!--<TextView-->
             <!--android:text="@string/content_alarm"-->
             <!--style="@style/MyAppTheme.GridText"-->
-            <!--app:layout_row="8"/>-->
+            <!--app:layout_row="8"-->
+            <!--app:layout_rowSpan="2"/>-->
 
         <CheckBox
             android:id="@+id/check_alarm"
             android:text="@string/content_no_alarm"
             android:textSize="@dimen/typo_body"
-            app:layout_column="2"
+            app:layout_column="1"
+            app:layout_columnSpan="4"
             app:layout_row="8"
             />
+
+    <TextView
+        android:text="@string/content_alarm"
+        app:layout_column="1"
+        app:layout_columnSpan="4"
+        app:layout_row="9"/>
+
 
         <TextView
             android:id="@+id/txt_cancel"
@@ -149,6 +163,7 @@
             android:clickable="true"
             android:onClick="clickBtn"
             app:layout_column="1"
+            app:layout_columnSpan="2"
             app:layout_row="10"/>
 
         <TextView
@@ -158,7 +173,8 @@
             android:textStyle="bold"
             android:clickable="true"
             android:onClick="clickBtn"
-            app:layout_column="2"
+            app:layout_column="3"
+            app:layout_columnSpan="2"
             app:layout_row="10"/>
 
 </android.support.v7.widget.GridLayout>
