--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,79 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="kr.anima.xd.s.a170802_balancewheel.LoginActivity"
-    android:orientation="vertical"
-    android:gravity="center">
-
-    <ImageView
-        android:layout_width="@dimen/ic_96dp"
-        android:layout_height="@dimen/ic_96dp"
-        android:src="@mipmap/ic_launcher"
-        android:layout_margin="@dimen/_8dp"
-        android:layout_gravity="center"
-        android:scaleType="centerCrop"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="@dimen/typo_title"
-        android:gravity="center"
-        android:layout_margin="@dimen/_8dp"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_select_account"
-        android:layout_margin="@dimen/_8dp"/>
+    >
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
-        <ImageView
-            android:id="@+id/img_facebook"
-            android:layout_width="@dimen/ic_24dp"
-            android:layout_height="@dimen/ic_24dp"
-            android:src="@drawable/ic_facebook_r"
-            android:clickable="true"
-            android:onClick="clickAccount"
-            android:layout_margin="@dimen/_8dp"/>
-        <ImageView
-            android:id="@+id/img_google"
-            android:layout_width="@dimen/ic_24dp"
-            android:layout_height="@dimen/ic_24dp"
-            android:src="@drawable/ic_google_plus_r"
-            android:clickable="true"
-            android:onClick="clickAccount"
-            android:layout_margin="@dimen/_8dp"/>
-    </LinearLayout>
+        android:orientation="vertical"
+        android:layout_centerInParent="true"
+        android:gravity="center">
 
-    <TextView
-        android:id="@+id/txt_noAccount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_btn_no_account"
-        android:onClick="clickAccount"
-        android:layout_margin="@dimen/_4dp"/>
-    <TextView
-        android:id="@+id/txt_forgotPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_forgot_password"
-        android:onClick="clickPassword"
-        android:layout_margin="@dimen/_8dp"/>
+        <ImageView
+            android:layout_width="@dimen/ic_128dp"
+            android:layout_height="@dimen/ic_128dp"
+            android:src="@mipmap/ic_launcher"
+            android:layout_margin="@dimen/_8dp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            />
+        <TextView
+            android:layout_width="@dimen/ic_128dp"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textSize="@dimen/typo_title"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:layout_margin="@dimen/_8dp"
+            />
+
+        <!--TODO : 텍스트 잘림-->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_select_account"
+            android:textSize="@dimen/typo_caption_sub"
+            android:layout_marginBottom="@dimen/_8dp"
+            android:gravity="center"
+            android:lines="1"/>
+
+        <LinearLayout
+            android:layout_width="@dimen/ic_128dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal">
+            <ImageView
+                android:id="@+id/img_facebook"
+                android:layout_width="@dimen/ic_24dp"
+                android:layout_height="@dimen/ic_24dp"
+                app:srcCompat="@drawable/ic_facebook_r"
+                android:clickable="true"
+                android:onClick="clickAccount"
+                android:layout_margin="@dimen/_8dp"/>
+            <ImageView
+                android:id="@+id/img_google"
+                android:layout_width="@dimen/ic_24dp"
+                android:layout_height="@dimen/ic_24dp"
+                app:srcCompat="@drawable/ic_google_plus_r"
+                android:clickable="true"
+                android:onClick="clickAccount"
+                android:layout_margin="@dimen/_8dp"/>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/txt_noAccount"
+            android:layout_width="@dimen/ic_128dp"
+            android:layout_height="wrap_content"
+            android:text="@string/app_btn_no_account"
+            android:textSize="@dimen/typo_caption_sub"
+            android:onClick="clickAccount"
+            android:layout_marginBottom="@dimen/_4dp"
+            android:gravity="center"/>
+        <TextView
+            android:id="@+id/txt_forgotPassword"
+            android:layout_width="@dimen/ic_128dp"
+            android:layout_height="wrap_content"
+            android:text="@string/app_forgot_password"
+            android:textSize="@dimen/typo_caption_sub"
+            android:lines="1"
+            android:onClick="clickPassword"
+            android:layout_margin="@dimen/_8dp"
+            android:gravity="center"/>
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_maker"
-
+        android:textSize="@dimen/typo_headline_sub"
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/_8dp"
         />
 
-</LinearLayout>
+</RelativeLayout>
