--- a/app/src/main/res/layout/dashboard_tracker_open.xml
+++ b/app/src/main/res/layout/dashboard_tracker_open.xml
@@ -6,10 +6,14 @@
     android:layout_height="match_parent">
 
         <android.support.design.widget.TabLayout
-            android:id="@+id/layout_tab"
+            android:id="@+id/layout_tab_tracker"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabGravity="fill">
+            app:tabGravity="fill"
+            app:tabIndicatorColor="@color/myColorAccent"
+            app:tabTextColor="@color/myColorText"
+            app:tabSelectedTextColor="@color/myColorAccent"
+            >
 
             <android.support.design.widget.TabItem
                 android:layout_width="wrap_content"
@@ -27,13 +31,6 @@
                 android:text="text"/>
 
         </android.support.design.widget.TabLayout>
-
-    <!--<FrameLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:background="@color/myColorAccent">-->
-
-    <!--</FrameLayout>-->
 
     <android.support.v4.view.ViewPager
         android:id="@+id/tracker_open_pager"
