--- a/app/src/main/res/layout/dashboard_tracker_open.xml
+++ b/app/src/main/res/layout/dashboard_tracker_open.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
         <android.support.design.widget.TabLayout
-            android:id="@+id/layout_tab"
+            android:id="@+id/layout_tab_tracker"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabGravity="fill">
