--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -1,131 +1,196 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="kr.anima.xd.s.a170802_balancewheel.InventoryFragment"
-    >
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/view_total"
-        android:layout_width="@dimen/ic_176dp"
-        android:layout_height="@dimen/ic_176dp"
-        android:layout_marginBottom="@dimen/_8dp"
-        app:cardCornerRadius="@dimen/_4dp">
-
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/view_tracker_open"
-        android:layout_width="wrap_content"
-        android:layout_height="86dp"
-        android:layout_toRightOf="@id/view_total"
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="@dimen/_8dp"
-        android:layout_marginBottom="2dp"
-        app:cardCornerRadius="@dimen/_4dp">
-
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/view_tracker_all"
-        android:layout_width="wrap_content"
-        android:layout_height="86dp"
-        android:layout_toRightOf="@id/view_total"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/view_tracker_open"
-        android:layout_marginLeft="@dimen/_8dp"
-        android:layout_marginTop="2dp"
-        app:cardCornerRadius="@dimen/_4dp">
-
-    </android.support.v7.widget.CardView>
+    android:orientation="vertical"
+    android:weightSum="2">
 
     <LinearLayout
-        android:id="@+id/layout_btn"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/ic_72dp"
-        android:orientation="horizontal"
-        android:layout_below="@id/view_total"
-        android:layout_marginBottom="@dimen/_8dp"
-        android:weightSum="3">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:weightSum="3"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_marginBottom="@dimen/_4dp">
 
         <LinearLayout
-            android:id="@+id/btn_level"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:weightSum="5">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="3.5"
-                app:srcCompat="@drawable/ic_navi_globe"
-                android:scaleType="fitCenter"
-                android:padding="@dimen/_4dp"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1.5"
-                android:text="@string/inven_level"
-                android:textSize="@dimen/typo_btn"
-                android:gravity="center"/>
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:orientation="horizontal"
+            android:weightSum="3"
+            android:layout_marginBottom="@dimen/_4dp">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:gravity="center">
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/view_inven_total"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/CardView.Inventory"
+                    >
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="@string/menu_navi_inventory"
+                        android:gravity="center"/>
+                </android.support.v7.widget.CardView>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                android:layout_weight="1"
+                android:weightSum="2">
+
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/view_inven_tracker_open"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    style="@style/CardView.Inventory"
+                    >
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center">
+                        <TextView
+                            android:id="@+id/txt_num_tracker_open"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0"
+                            android:textStyle="bold"
+                            android:textSize="48sp"
+                            android:layout_marginBottom="@dimen/_4dp"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/inven_tracker_open"/>
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    style="@style/CardView.Inventory">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center">
+                        <TextView
+                            android:id="@+id/txt_num_tracker_all"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0"
+                            android:textStyle="bold"
+                            android:textSize="48sp"
+                            android:layout_marginBottom="@dimen/_4dp"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/inven_tracker_all"/>
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/btn_storage"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:weightSum="5">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="3.5"
-                app:srcCompat="@drawable/ic_navi_globe"
-                android:scaleType="fitCenter"
-                android:padding="@dimen/_4dp"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1.5"
-                android:text="@string/inven_storage"
-                android:textSize="@dimen/typo_btn"
-                android:gravity="center"/>
-        </LinearLayout>
+            android:orientation="horizontal"
+            android:weightSum="3"
+            android:gravity="bottom"
+            >
 
-        <LinearLayout
-            android:id="@+id/btn_event"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:weightSum="5">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="3.5"
-                app:srcCompat="@drawable/ic_navi_globe"
-                android:scaleType="fitCenter"
-                android:padding="@dimen/_4dp"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1.5"
-                android:text="@string/inven_event"
-                android:textSize="@dimen/typo_btn"
-                android:gravity="center"/>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                app:layout_gravity="fill"
+                android:clickable="true">
+                <ImageView
+                    android:layout_width="@dimen/ic_48dp"
+                    android:layout_height="@dimen/ic_48dp"
+                    app:srcCompat="@drawable/ic_diamond_l"
+                    android:scaleType="fitCenter"
+                    android:layout_marginBottom="@dimen/_4dp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:textSize="@dimen/typo_caption"
+                    android:text="@string/inven_level"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                app:layout_gravity="fill"
+                android:clickable="true">
+                <ImageView
+                    android:layout_width="@dimen/ic_48dp"
+                    android:layout_height="@dimen/ic_48dp"
+                    app:srcCompat="@drawable/ic_mbri_home"
+                    android:layout_marginBottom="@dimen/_4dp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="@string/inven_storage"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                app:layout_gravity="fill"
+                android:clickable="true">
+                <ImageView
+                    android:layout_width="@dimen/ic_48dp"
+                    android:layout_height="@dimen/ic_48dp"
+                    app:srcCompat="@drawable/ic_mbri_home"
+                    android:layout_marginBottom="@dimen/_4dp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="@string/inven_event"/>
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
 
     <ListView
         android:id="@+id/list_mission"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/layout_btn">
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
     </ListView>
 
-</RelativeLayout>
+</LinearLayout>
