--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,6 +50,7 @@
         <item name="android:layout_margin">@dimen/_2dp</item>
         <item name="cardElevation">@dimen/_2dp</item>
         <item name="cardCornerRadius">@dimen/_2dp</item>
+        <item name="android:clickable">true</item>
     </style>
     
 </resources>
