--- a/app/src/main/res/layout/dashboard_board_list.xml
+++ b/app/src/main/res/layout/dashboard_board_list.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="kr.anima.xd.s.a170802_balancewheel.DashboardListFragment"
-    app:theme="@style/MyAppTheme.NoActionBar">
+    tools:context="kr.anima.xd.s.a170802_balancewheel.DashboardListFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/view_dash_recycler"
@@ -17,7 +16,7 @@
         android:id="@+id/fab_edit_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_mbri_layout"
+        app:srcCompat="@drawable/ic_mbri_layout"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_margin="@dimen/_16dp"
