--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="ic_20dp">20dp</dimen>
     <dimen name="ic_24dp">24dp</dimen>
     <dimen name="ic_48dp">48dp</dimen>
+    <dimen name="ic_56dp">56dp</dimen>
     <dimen name="ic_72dp">72dp</dimen>
     <dimen name="ic_96dp">96dp</dimen>
     <dimen name="ic_128dp">128dp</dimen>
