--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,22 +48,28 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center_horizontal">
-            <ImageView
-                android:id="@+id/img_facebook"
-                android:layout_width="@dimen/ic_24dp"
-                android:layout_height="@dimen/ic_24dp"
-                app:srcCompat="@drawable/ic_facebook_r"
-                android:clickable="true"
-                android:onClick="clickAccount"
-                android:layout_margin="@dimen/_8dp"/>
-            <ImageView
-                android:id="@+id/img_google"
-                android:layout_width="@dimen/ic_24dp"
-                android:layout_height="@dimen/ic_24dp"
-                app:srcCompat="@drawable/ic_google_plus_r"
-                android:clickable="true"
-                android:onClick="clickAccount"
-                android:layout_margin="@dimen/_8dp"/>
+            <!--<ImageView-->
+                <!--android:id="@+id/img_facebook"-->
+                <!--android:layout_width="@dimen/ic_24dp"-->
+                <!--android:layout_height="@dimen/ic_24dp"-->
+                <!--app:srcCompat="@drawable/ic_facebook_r"-->
+                <!--android:clickable="true"-->
+                <!--android:onClick="clickAccount"-->
+                <!--android:layout_margin="@dimen/_8dp"/>-->
+            <!--<ImageView-->
+                <!--android:id="@+id/img_google"-->
+                <!--android:layout_width="@dimen/ic_24dp"-->
+                <!--android:layout_height="@dimen/ic_24dp"-->
+                <!--app:srcCompat="@drawable/ic_google_plus_r"-->
+                <!--android:clickable="true"-->
+                <!--android:onClick="clickAccount"-->
+                <!--android:layout_margin="@dimen/_8dp"/>-->
+
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/sign_in_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
         </LinearLayout>
 
         <TextView
