--- a/app/src/main/res/layout/dashboard_board_list.xml
+++ b/app/src/main/res/layout/dashboard_board_list.xml
@@ -3,12 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="kr.anima.xd.s.a170802_balancewheel.DashboardListFragment">
+    tools:context="kr.anima.xd.s.a170802_balancewheel.DashboardListFragment"
+    android:padding="@dimen/_8dp">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/view_dash_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layoutManager="android.support.v7.widget.GridLayoutManager"
+        app:spanCount="2"
+        android:orientation="vertical">
 
     </android.support.v7.widget.RecyclerView>
 
